# medical_clinic

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/apps/catalog/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/catalog/migrations/: 0001_initial.py
backend/apps/clients/: admin.py  models.py  urls.py  views.py
backend/apps/clients/migrations/: 0001_initial.py  0002_initial.py
backend/apps/clients/serializers/: clients.py  reg_services.py
backend/apps/employees/: admin.py  models.py  serializers.py
backend/apps/employees/migrations/: 0001_initial.py  0002_initial.py
backend/apps/users/: admin.py  models.py  urls.py
backend/apps/users/management/commands/: create_su.py  dumpdata.py  my_loaddata.py
backend/apps/users/migrations/: 0001_initial.py
backend/apps/users/serializers/: users.py
backend/apps/users/views/: users.py
backend/config/: settings.py  urls.py
backend/core/: messages.py  permissions.py
backend/fixtures/: 001_groups.json  002_permissions.json  003_users.json  004_clients.json  005_employees.json  006_service_categories.json  007_service_information.json  008_register_services.json
backend/tests/: conftest.py
backend/tests/catalog/: test_urls_catalog.py
backend/tests/clients/: test_urls_clients.py
